--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,20 @@
 version: '3.8'
 
 services:
-  db:
+  database:
     image: 'postgres'
     env_file:
       - db.env
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/database
     ports:
       - '8000:80'
+    enviroment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=database
 
-  user_api:
-    depends_on:
-      - db
-    build: .
-    env_file:
-      - .env
-    volumes:
-      - ./:/app
-    ports:
-      - 4001:4001
-    command: bash -c "yarn && yarn dev"
-    #command: bash -c "yarn && yarn migration:run && yarn dev"
+volumes:
+  pgdata:
+    driver: local
+    
