--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.1",
     "typeorm": "^0.3.17"
   }
 }
