--- a/package.json
+++ b/package.json
@@ -15,6 +15,26 @@
     "db:seed": "ts-node-dev node_modules/typeorm-seeding/dist/cli.js seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "paths": {
+    "@entities/*": [
+      "src/entities/*"
+    ],
+    "@database/*": [
+      "src/database/*"
+    ],
+    "@middlewares/*": [
+      "src/middlewares/*"
+    ],
+    "@controllers/*": [
+      "src/controllers/*"
+    ],
+    "@migrations/*": [
+      "src/database/migrations/*"
+    ],
+    "@factories/*": [
+      "src/database/factories/*"
+    ],
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
