--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -48,6 +49,7 @@
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
+    "prisma": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.32.1"
   },
