alterações de importações

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     ports:
       - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=admin
     volumes:
       - pgdata:/data/postgres
 
