--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "cycleus_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
   "type": "module",
   "scripts": {
-    "start": "ts-node src/main.js",
-    "dev": "ts-node-dev --max_old_space_size=512 --respawn --transpile-only src/main.ts",
+    "start": "nodemon ts-node src/main.js",
+    "dev": "nodemon ts-node-dev --max_old_space_size=512 --respawn --transpile-only src/main.ts",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc -p tsconfig.json",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm",
     "db:seed": "ts-node-dev node_modules/typeorm-seeding/dist/cli.js seed",
-    "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/default -d src/db/config.ts",
-    "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
+    "migration:generate": "npm run typeorm -- migration:generate src/database/migrations/default -d src/database/config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/database/config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/database/config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "paths": {
