--- a/db.env
+++ b/db.env
@@ -1,3 +1,6 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+DB_USER=admin
+DB_PASSWORD=admin
+DB_DB=cycleus
+DB_HOST=localhost
+DB_NAME=api_cycleus
+PORT = 3000
