--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "cycleus_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "main.js",
   "type": "module",
   "scripts": {
     "start": "nodemon ts-node src/main.js",
-    "dev": "nodemon ts-node-dev --max_old_space_size=512 --respawn --transpile-only src/main.ts",
+		"dev": "nodemon --exec ts-node ./src/main.js",
+		"migration:generate": "typeorm-ts-node-commonjs -d ./src/database/config.ts migration:generate ./src/migrations/default",
+		"migration:run": "typeorm-ts-node-commonjs -d ./src/database/config.ts migration:run",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc -p tsconfig.json",
-    "typeorm": "ts-node-dev node_modules/.bin/typeorm",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "db:seed": "ts-node-dev node_modules/typeorm-seeding/dist/cli.js seed",
-    "migration:generate": "npm run typeorm -- migration:generate src/database/migrations/default -d src/database/config.ts",
-    "migration:run": "npm run typeorm -- migration:run -d src/database/config.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/database/config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,9 +31,6 @@
     ],
     "@migrations/*": [
       "src/database/migrations/*"
-    ],
-    "@factories/*": [
-      "src/database/factories/*"
     ]
   },
   "keywords": [],
@@ -58,6 +55,8 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
     "typeorm": "^0.3.17",
     "typescript": "^5.1.6"
