--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
   "scripts": {
     "start": "nodemon ts-node src/main.js",
 		"dev": "nodemon --exec ts-node ./src/main.js",
-		"migration:generate": "typeorm-ts-node-commonjs -d ./src/database/config.ts migration:generate ./src/migrations/default",
-		"migration:run": "typeorm-ts-node-commonjs -d ./src/database/config.ts migration:run",
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc -p tsconfig.json",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "db:seed": "ts-node-dev node_modules/typeorm-seeding/dist/cli.js seed",
-    "migration:revert": "npm run typeorm -- migration:revert -d src/database/config.ts",
+    "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
+		"migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
+		"build": "rm -rf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "paths": {
-    "@entities/*": [
-      "src/entities/*"
-    ],
     "@database/*": [
       "src/database/*"
     ],
@@ -31,6 +24,9 @@
     ],
     "@migrations/*": [
       "src/database/migrations/*"
+    ],
+    "@entities/*": [
+      "src/database/entities/*"
     ]
   },
   "keywords": [],
@@ -48,9 +44,10 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.5",
-    "prisma": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.32.1",
+    "typescript": "^5.1.6",
+    "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   },
@@ -59,6 +56,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
     "typeorm": "^0.3.17",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "dotenv": "^16.0.1"
+
   }
 }
