--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cycleus_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon ts-node src/main.js",
-		"dev": "nodemon --exec ts-node ./src/main.js",
+    "start": "nodemon ts-node src/main.ts",
+		"dev": "nodemon --exec ts-node ./src/main.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
 		"migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
 		"build": "rm -rf ./dist && tsc",
