--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "cycleus_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
-  "type": "module",
+  "main": "main.js",
   "scripts": {
     "start": "nodemon ts-node src/main.ts",
-		"dev": "nodemon --exec ts-node ./src/main.ts",
-    "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
-		"migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
-		"build": "rm -rf ./dist && tsc",
+    "dev": "nodemon --exec ts-node ./src/main.ts",
+    "migration:generate": "typeorm-ts-node-commonjs -d ./src/config.ts migration:generate ./src/migrations/default",
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/config.ts migration:run",
+    "build": "rm -rf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "paths": {
@@ -34,9 +33,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
@@ -46,18 +45,17 @@
     "postgres": "^3.3.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.32.1",
-    "typescript": "^5.1.6",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
+    "dotenv": "^16.0.1",
     "typeorm": "^0.3.17",
-    "typescript": "^5.1.6",
-    "dotenv": "^16.0.1"
-
+    "typescript": "^5.1.6"
   }
 }
