--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,11 @@
-DB_URL=
-PORT=
-SECRET_JWT=
+# DB
+DB_USER=postgres
+DB_PASSWORD=admin
+DB_HOST=localhost
+DB_NAME=postgres
+
+# BACKEND
+PORT = 3000
+
+# JWT
+SECRET_JWT=abc
